--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </head>
     <body>
     <header>
-	<h1>Page title</h1>
+	<h1>Vc lecture website</h1>
+    <h2> By Danielle Huth </h2>
+     <h3>For Web tools </h3>
+    <h4> for visoion control week 2 </h4>
     </header>
     <nav id="pageNav">
     </nav>
