master btanxh index.html
small changes to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
 	<h1>Vc lecture website</h1>
     <h2> By Danielle Huth </h2>
+    <h2> master branch </h2>
      <h3>For Web tools </h3>
     <h4> for visoion control week 2 </h4>
     </header>
